--- a/index.html
+++ b/index.html
@@ -13,7 +13,199 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header class="container mb-2">
+        <!-- Nav-Ber Section  -->
+        <section>
+            <nav class="navbar navbar-expand-lg bg-white mb-2">
+                <div class="container-fluid">
+                  <a class="navbar-brand fw-bold" href="#">STUDY<span class="text-danger">PRESS</span></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-around">
+                      <li class="nav-item ">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Courses</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Deals</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Success</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Register</a>
+                      </li>
+                    </ul>
+                    <span class="navbar-text">
+                     <button class="border border-primary bg-white text-primary fw-semibold rounded-1 p-2">Register</button>
+                    </span>
+                  </div>
+                </div>
+              </nav>
+        </section>
 
+        <!------------- CarOusol Item ----------- -->
+        <section >
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100  opacity-50" alt="...">
+                    <div class="carousel-caption text-dark  d-md-block py-auto">
+                      <h1 class="fw-semibold">Get Started Digital <br>
+                        Learning</h1>
+                      <p>Digital learning is any type of learning that is accompanied by technology or by instructional practice.</p>
+                        <button class="btn btn-primary">Get Started</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 opacity-50" alt="...">
+                    <div class="carousel-caption text-dark d-md-block py-auto">
+                      <h1 class="fw-semibold">Get Started Easy And <br> Free Larning</h1>
+                      <p>Review important concepts and explore new topics—the options are endless with Education.com!</p>
+                      <button class="btn btn-primary">Get Started</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 opacity-50" alt="...">
+                    <div class="carousel-caption text-dark d-md-block py-auto">
+                      <h1 class="fw-semibold">Great Writing, <br>
+                        Simplified</h1>
+                      <p>Compose bold, clear, mistake-free writing with Grammarly’s new AI-powered desktop Windows app.</p>
+                      <button class="btn btn-primary">Get Started</button>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+    </header>
+
+    <!-- Main Part Start  -->
+    <Main class="container">
+      <!-- -------------Course Text Section ------ -->
+      <section class="mt-5">
+          <div class="text-center">
+              <h4 class="fw-semibold">Discover Our Popular <br>
+                  Courses</h4>
+                  <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+          </div>
+      </section>
+      <!----------------- Course Blog section------  -->
+      <section class="mb-5 pb-5" >
+          <div class="container overflow-hidden ">
+              <div class="row gy-3">
+                  <!-- ........Course 1........ -->
+                <div class="col-6">
+                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                      <div>
+                          <img class="img-fluid" src="images/course/course-1.png" alt="">
+                      </div>
+                      <div class="ps-3">
+                          <h5>Fundamental Of UI/UX Design</h5>
+                          <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h6 class="text-primary">Price : 200$</h6>
+                      </div>
+                  </div>
+                </div>
+                <!-- ----------Course 2--------- -->
+                <div class="col-6">
+                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                      <div>
+                          <img class="img-fluid" src="images/course/course-2.png" alt="">
+                      </div>
+                      <div class="ps-3">
+                          <h5>Javascript Basic to advanced</h5>
+                          <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h6 class="text-primary">Price : 210$</h6>
+                      </div>
+                  </div>
+                </div>
+                <!-- --------Course 3------- -->
+                <div class="col-6">
+                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                      <div>
+                          <img class="img-fluid" src="images/course/course-3.png" alt="">
+                      </div>
+                      <div class="ps-3">
+                          <h5>Fullstack Web Development</h5>
+                          <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h6 class="text-primary">Price : 250$</h6>
+                      </div>
+                  </div>
+                </div>
+                <!-- -------Course 4 ----------->
+                <div class="col-6">
+                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                      <div>
+                          <img class="img-fluid" src="images/course/course-4.png" alt="">
+                      </div>
+                      <div class="ps-3">
+                          <h5>Digital Marketing</h5>
+                          <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h6 class="text-primary">Price : 180$</h6>
+                      </div>
+                  </div>
+              </div>
+              <!-- --------Course 5 --------->
+                <div class="col-6">
+                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                      <div>
+                          <img class="img-fluid" src="images/course/course-5.png" alt="">
+                      </div>
+                      <div class="ps-3">
+                          <h5>Photography Basic Rules</h5>
+                          <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h6 class="text-primary">Price : 100$</h6>
+                      </div>
+                  </div>
+              </div>
+              <!-- ---------Course 6 ------->
+                <div class="col-6">
+                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                      <div>
+                          <img class="img-fluid" src="images/course/course-6.png" alt="">
+                      </div>
+                      <div class="ps-3">
+                          <h5>Motion Graphics</h5>
+                          <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h6 class="text-primary">Price : 80$</h6>
+                      </div>
+                  </div>
+              </div>
+            </div>
+            <!-- See more button  -->
+            <div class="d-flex justify-content-center mt-4">
+              <button class="btn btn-primary">See More Courses</button>
+          </div>
+      </section>
+      <!-- ------------Exploring Part Start-------  -->
+      <section>
+          
+      </section>
+
+  </Main>
+
+
+    
 
     <!-- ---------Bootstrap JS Link --------- -->
     <script src="bootstrap/bootstrap.min.js"></script>
