--- a/index.html
+++ b/index.html
@@ -198,8 +198,38 @@
           </div>
       </section>
       <!-- ------------Exploring Part Start-------  -->
-      <section>
-          
+      <section class="mb-5">
+          <div class="row d-flex align-items-center bg-light">
+            <div class="col-6">
+              <img class="img-fluid" src="images/working.png" alt="">
+            </div>
+            <div class="col-6  px-4">
+              <h1>Explore The E-learning 
+                Institute</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the 
+                  majority have suffered alteration in some form, by injected humour, or 
+                  randomised words which don't look even slightly believable. If you are going 
+                  to use a passage of Lorem Ipsum, you need to be sure</p>
+                  <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum 
+                    generators on the Internet tend to repeat predefined</p>
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <h1>3.2K+</h1>
+                        <p>Online Course</p>
+                      </div>
+                      <div>
+                        <h1>600+</h1>
+                        <p>Expert member</p>
+                      </div>
+                      <div>
+                        <h1>1k+</h1>
+                        <p>Rating & Review</p>
+                      </div>
+                    </div>
+                    <button class="btn btn-primary">Read More</button>
+
+            </div>
+          </div>
       </section>
 
   </Main>
