added register part and register from

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       <h1 class="fw-semibold">Get Started Digital <br>
                         Learning</h1>
                       <p>Digital learning is any type of learning that is accompanied by technology or by instructional practice.</p>
-                        <button class="btn btn-primary">Get Started</button>
+                        <button class="btn btn-primary btn-lg">Get Started</button>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -74,7 +74,7 @@
                     <div class="carousel-caption text-dark d-md-block py-auto">
                       <h1 class="fw-semibold">Get Started Easy And <br> Free Larning</h1>
                       <p>Review important concepts and explore new topics—the options are endless with Education.com!</p>
-                      <button class="btn btn-primary">Get Started</button>
+                      <button class="btn btn-primary btn-lg">Get Started</button>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -83,7 +83,7 @@
                       <h1 class="fw-semibold">Great Writing, <br>
                         Simplified</h1>
                       <p>Compose bold, clear, mistake-free writing with Grammarly’s new AI-powered desktop Windows app.</p>
-                      <button class="btn btn-primary">Get Started</button>
+                      <button class="btn btn-primary btn-lg">Get Started</button>
                     </div>
                   </div>
                 </div>
@@ -227,9 +227,18 @@
                       </div>
                     </div>
                     <button class="btn btn-primary">Read More</button>
-
             </div>
           </div>
+      </section>
+      <!---------------- Redy And Register Part----------  -->
+      <section class="d-flex justify-content-between align-items-center bg-primary rounded-3 p-5 mb-5">
+        <div class="text-white">
+          <h1 class="fw-bold">Ready to join?</h1>
+          <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
+        </div>
+        <div>
+          <button class="btn btn-light"><a class="text-decoration-none" href="from.html" target="_blank">Register Now</a></button>
+        </div>
       </section>
 
   </Main>
