added Student Part

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <!-------------- Coustom CSS Link-------  -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Font Awassam Icon Kits  -->
+    <script src="https://kit.fontawesome.com/edb14301e4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="container mb-2">
@@ -238,6 +240,114 @@
         </div>
         <div>
           <button class="btn btn-light"><a class="text-decoration-none" href="from.html" target="_blank">Register Now</a></button>
+        </div>
+      </section>
+
+      <!-- Student Revew Part  -->
+      <section class="mb-5">
+        <div>
+          <h2>Meet Our Successfull <br>
+            Students</h2>
+            <p class="text-secondary">It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout</p>
+        </div>
+        <div>
+          <div class="container text-center">
+            <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3">
+              <div class="col">
+                <div class="p-0 border bg-light">
+                  <img class="img-fluid" src="images/student/student-1.png" alt="">
+                  <h5 class="pt-3 fw-semibold font-monospace">Awlad Hossain</h5>
+                  <p>UIUX Designer</p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="p-0 border bg-light"><img class="img-fluid" src="images/student/student-2.png" alt="">
+                  <h5 class="pt-3 fw-semibold font-monospace">Jannatul Islam</h5>
+                  <p>Motion Design</p></div>
+              </div>
+              <div class="col">
+                <div class="p-0 border bg-light"><img class="img-fluid" src="images/student/student-3.png" alt="">
+                  <h5 class="pt-3 fw-semibold font-monospace">Imran Hossain</h5>
+                  <p>Graphic Designer</p></div>
+              </div>
+              <div class="col">
+                <div class="p-0 border bg-light"><img class="img-fluid" src="images/student/student-4.png" alt="">
+                  <h5 class="pt-3 fw-semibold font-monospace">Nishi Akter</h5>
+                  <p>Beuty Designer</p></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- See more button  -->
+        <div class="d-flex justify-content-center mt-4">
+          <button class="btn btn-primary">View All</button>
+      </div>
+      </section>
+
+      <!-- --------Student Feedback Part ------->
+      <section class="my-5">
+        <!-------- Text Part---------  -->
+        <div class="text-center">
+          <h2>Some Students Feedback</h2>
+          <p class="text-secondary">It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout</p>
+        </div>
+        <!-- --Blog Part  -->
+        <div>
+          <div class="container overflow-hidden">
+            <div class="row gx-5">
+              <div class="col">
+               <div class="p-3 border bg-light">
+                <div class="d-flex justify-content-between">
+                  <img src="images/comma.png" alt="">
+                  <p class="text-warning">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half"></i>
+                  </p>
+                </div>
+                <p class="pt-3">There are many variations of passages of Lorem Ipsum available, but 
+                  the majority have suffered alteration in some form, by injected 
+                  humour, or randomised words which don't look even slightly 
+                  believable. If you are going to use a passage of Lorem</p>
+                  <div class="d-flex align-items-center">
+                    <img class="img-fluid w-25" src="images/student/student-5.png" alt="">
+                    <div class="ps-3">
+                      <h5 class="pt-3 fw-semibold font-monospace">Awlad Hossain</h5>
+                      <p>UIUX Designer</p>
+                    </div>
+                  </div>
+               </div>
+              </div>
+              <div class="col">
+                <div class="p-3 border bg-light">
+                 <div class="d-flex justify-content-between">
+                   <img src="images/comma.png" alt="">
+                   <p class="text-warning">
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star-half"></i>
+                   </p>
+                 </div>
+                 <p class="pt-3">There are many variations of passages of Lorem Ipsum available, but 
+                   the majority have suffered alteration in some form, by injected 
+                   humour, or randomised words which don't look even slightly 
+                   believable. If you are going to use a passage of Lorem</p>
+                   <div class="d-flex align-items-center">
+                     <img class="img-fluid w-25" src="images/student/student-6.png" alt="">
+                     <div class="ps-3">
+                       <h5 class="pt-3 fw-semibold font-monospace">Santa Akther</h5>
+                       <p>Grafix Designer</p>
+                     </div>
+                   </div>
+                </div>
+               </div>
+            </div>
+          </div>
         </div>
       </section>
 
