complated main part

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100  opacity-50" alt="...">
-                    <div class="carousel-caption text-dark  d-md-block py-auto">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 opacity-25 image-carousol" alt="...">
+                    <div class="carousel-caption text-dark  d-md-block sm-py-3">
                       <h1 class="fw-semibold">Get Started Digital <br>
                         Learning</h1>
                       <p>Digital learning is any type of learning that is accompanied by technology or by instructional practice.</p>
@@ -72,15 +72,15 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100 opacity-50" alt="...">
-                    <div class="carousel-caption text-dark d-md-block py-auto">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 opacity-50 image-carousol" alt="...">
+                    <div class="carousel-caption text-white d-md-block py-auto">
                       <h1 class="fw-semibold">Get Started Easy And <br> Free Larning</h1>
                       <p>Review important concepts and explore new topics—the options are endless with Education.com!</p>
                       <button class="btn btn-primary btn-lg">Get Started</button>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100 opacity-50" alt="...">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 opacity-50 image-carousol" alt="...">
                     <div class="carousel-caption text-dark d-md-block py-auto">
                       <h1 class="fw-semibold">Great Writing, <br>
                         Simplified</h1>
@@ -114,14 +114,14 @@
       <!----------------- Course Blog section------  -->
       <section class="mb-5 pb-5" >
           <div class="container overflow-hidden ">
-              <div class="row gy-3">
+              <div class="row gy-3 row-cols-lg-2  row-cols-md-1  row-cols-sm-1 row-cols-xs-1">
                   <!-- ........Course 1........ -->
                 <div class="col-6">
-                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                  <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
-                          <img class="img-fluid" src="images/course/course-1.png" alt="">
+                          <img class="img-fluid image-blog" src="images/course/course-1.png" alt="">
                       </div>
-                      <div class="ps-3">
+                      <div class="p-3">
                           <h5>Fundamental Of UI/UX Design</h5>
                           <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                           <h6 class="text-primary">Price : 200$</h6>
@@ -130,11 +130,11 @@
                 </div>
                 <!-- ----------Course 2--------- -->
                 <div class="col-6">
-                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                  <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
-                          <img class="img-fluid" src="images/course/course-2.png" alt="">
+                          <img class="img-fluid image-blog" src="images/course/course-2.png" alt="">
                       </div>
-                      <div class="ps-3">
+                      <div class="p-3">
                           <h5>Javascript Basic to advanced</h5>
                           <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                           <h6 class="text-primary">Price : 210$</h6>
@@ -143,11 +143,11 @@
                 </div>
                 <!-- --------Course 3------- -->
                 <div class="col-6">
-                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                  <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
-                          <img class="img-fluid" src="images/course/course-3.png" alt="">
+                          <img class="img-fluid image-blog" src="images/course/course-3.png" alt="">
                       </div>
-                      <div class="ps-3">
+                      <div class="p-3">
                           <h5>Fullstack Web Development</h5>
                           <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                           <h6 class="text-primary">Price : 250$</h6>
@@ -156,11 +156,11 @@
                 </div>
                 <!-- -------Course 4 ----------->
                 <div class="col-6">
-                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                  <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
-                          <img class="img-fluid" src="images/course/course-4.png" alt="">
+                          <img class="img-fluid image-blog" src="images/course/course-4.png" alt="">
                       </div>
-                      <div class="ps-3">
+                      <div class="p-3">
                           <h5>Digital Marketing</h5>
                           <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                           <h6 class="text-primary">Price : 180$</h6>
@@ -169,11 +169,11 @@
               </div>
               <!-- --------Course 5 --------->
                 <div class="col-6">
-                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                  <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
-                          <img class="img-fluid" src="images/course/course-5.png" alt="">
+                          <img class="img-fluid image-blog" src="images/course/course-5.png" alt="">
                       </div>
-                      <div class="ps-3">
+                      <div class="p-3">
                           <h5>Photography Basic Rules</h5>
                           <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                           <h6 class="text-primary">Price : 100$</h6>
@@ -182,11 +182,11 @@
               </div>
               <!-- ---------Course 6 ------->
                 <div class="col-6">
-                  <div class="p-1 border rounded-1 bg-light d-flex p-3 ">
+                  <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
-                          <img class="img-fluid" src="images/course/course-6.png" alt="">
+                          <img class="img-fluid image-blog" src="images/course/course-6.png" alt="">
                       </div>
-                      <div class="ps-3">
+                      <div class="p-3">
                           <h5>Motion Graphics</h5>
                           <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                           <h6 class="text-primary">Price : 80$</h6>
@@ -199,32 +199,29 @@
               <button class="btn btn-primary">See More Courses</button>
           </div>
       </section>
+
+
       <!-- ------------Exploring Part Start-------  -->
       <section class="mb-5">
-          <div class="row d-flex align-items-center bg-light">
+          <div class="row d-md-flex d-lg-flex bg-light explore-part">
             <div class="col-6">
-              <img class="img-fluid" src="images/working.png" alt="">
+              <img class="img-fluid explore-image" src="images/working.png" alt="">
             </div>
-            <div class="col-6  px-4">
-              <h1>Explore The E-learning 
-                Institute</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the 
-                  majority have suffered alteration in some form, by injected humour, or 
-                  randomised words which don't look even slightly believable. If you are going 
-                  to use a passage of Lorem Ipsum, you need to be sure</p>
-                  <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum 
-                    generators on the Internet tend to repeat predefined</p>
+            <div class="col-6 py-5 px-4 d-sm-p-5">
+              <h2>Explore The E-learning 
+                Institute</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form. </p>
                     <div class="d-flex justify-content-between">
-                      <div>
-                        <h1>3.2K+</h1>
+                      <div class="p-2">
+                        <h3>3.2K+</h3>
                         <p>Online Course</p>
                       </div>
-                      <div>
-                        <h1>600+</h1>
+                      <div class="p-2">
+                        <h3>600+</h3>
                         <p>Expert member</p>
                       </div>
-                      <div>
-                        <h1>1k+</h1>
+                      <div class="p-2">
+                        <h3>1k+</h3>
                         <p>Rating & Review</p>
                       </div>
                     </div>
@@ -232,9 +229,11 @@
             </div>
           </div>
       </section>
+
+
       <!---------------- Redy And Register Part----------  -->
-      <section class="d-flex justify-content-between align-items-center bg-primary rounded-3 p-5 mb-5">
-        <div class="text-white">
+      <section class="d-sm-block d-md-block d-lg-flex d-sm-text-center d-md-text-center justify-content-between align-items-center bg-primary rounded-3 p-5 mb-5">
+        <div class="text-white ">
           <h1 class="fw-bold">Ready to join?</h1>
           <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
         </div>
@@ -245,33 +244,33 @@
 
       <!-- Student Revew Part  -->
       <section class="mb-5">
-        <div>
+        <div class="text-center">
           <h2>Meet Our Successfull <br>
             Students</h2>
             <p class="text-secondary">It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout</p>
         </div>
         <div>
           <div class="container text-center">
-            <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3">
+            <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4 g-2 g-lg-3">
               <div class="col">
                 <div class="p-0 border bg-light">
-                  <img class="img-fluid" src="images/student/student-1.png" alt="">
+                  <img class="img-fluid student-image" src="images/student/student-1.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Awlad Hossain</h5>
                   <p>UIUX Designer</p>
                 </div>
               </div>
               <div class="col">
-                <div class="p-0 border bg-light"><img class="img-fluid" src="images/student/student-2.png" alt="">
+                <div class="p-0 border bg-light"><img class="img-fluid student-image" src="images/student/student-2.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Jannatul Islam</h5>
                   <p>Motion Design</p></div>
               </div>
               <div class="col">
-                <div class="p-0 border bg-light"><img class="img-fluid" src="images/student/student-3.png" alt="">
+                <div class="p-0 border bg-light"><img class="img-fluid student-image" src="images/student/student-3.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Imran Hossain</h5>
                   <p>Graphic Designer</p></div>
               </div>
               <div class="col">
-                <div class="p-0 border bg-light"><img class="img-fluid" src="images/student/student-4.png" alt="">
+                <div class="p-0 border bg-light"><img class="img-fluid student-image" src="images/student/student-4.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Nishi Akter</h5>
                   <p>Beuty Designer</p></div>
               </div>
@@ -295,7 +294,7 @@
         <!-- --Blog Part  -->
         <div>
           <div class="container overflow-hidden">
-            <div class="row gx-5">
+            <div class="row row-cols-sm-1 row-cols-md-1 row-cols-lg-2 gx-5 gy-5">
               <div class="col">
                <div class="p-3 border bg-light">
                 <div class="d-flex justify-content-between">
@@ -305,7 +304,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half"></i>
+                    <i class="fa-solid fa-star"></i>
                   </p>
                 </div>
                 <p class="pt-3">There are many variations of passages of Lorem Ipsum available, but 
@@ -313,9 +312,9 @@
                   humour, or randomised words which don't look even slightly 
                   believable. If you are going to use a passage of Lorem</p>
                   <div class="d-flex align-items-center">
-                    <img class="img-fluid w-25" src="images/student/student-5.png" alt="">
+                    <img class="img-fluid feadback-image" src="images/student/student-5.png" alt="">
                     <div class="ps-3">
-                      <h5 class="pt-3 fw-semibold font-monospace">Awlad Hossain</h5>
+                      <h6 class="pt-3 fw-semibold font-monospace">Awlad Hossain</h6>
                       <p>UIUX Designer</p>
                     </div>
                   </div>
@@ -330,7 +329,7 @@
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star-half"></i>
+                     <i class="fa-solid fa-star"></i>
                    </p>
                  </div>
                  <p class="pt-3">There are many variations of passages of Lorem Ipsum available, but 
@@ -338,9 +337,9 @@
                    humour, or randomised words which don't look even slightly 
                    believable. If you are going to use a passage of Lorem</p>
                    <div class="d-flex align-items-center">
-                     <img class="img-fluid w-25" src="images/student/student-6.png" alt="">
+                     <img class="img-fluid feadback-image" src="images/student/student-6.png" alt="">
                      <div class="ps-3">
-                       <h5 class="pt-3 fw-semibold font-monospace">Santa Akther</h5>
+                       <h6 class="pt-3 fw-semibold font-monospace">Santa Akther</h6>
                        <p>Grafix Designer</p>
                      </div>
                    </div>
@@ -349,6 +348,61 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <!-- Frequantly Asked Section  -->
+      <section class="mb-5">
+        <div class="text-center">
+          <h3>Frequently Asked Questions</h3>
+          <p>It is a long established fact that a reader will be distracted by the readable <br> 
+            content of a page when looking at its layout.</p>
+        </div>
+        <!----------- According Of this section ------ -->
+        <section class="container mx-5">
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  What is the defarent flex-box and grid?
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body"> <code>Grid and flexbox</code> The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  what is the difference between tailwind and bootstrap?
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Tailwind offers predesigned widgets to build a site from scratch with fast UI development. Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  What is css box model ?
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">In CSS, the term "box model" is used when talking about design and layout. The CSS box model is essentially a box that wraps around every HTML element.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingFour">
+                <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                  What is a semantic tag ?
+                </button>
+              </h2>
+              <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages</div>
+              </div>
+            </div>
+          </div>
+        </section>
+
       </section>
 
   </Main>
