--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             content of a page when looking at its layout.</p>
         </div>
         <!----------- According Of this section ------ -->
-        <section class="container mx-5">
+        <section class="container mx-5 w-100 pe-5">
           <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
@@ -402,10 +402,56 @@
             </div>
           </div>
         </section>
-
       </section>
-
   </Main>
+
+  <!-- -------Extra Trusted Comphany Part-------  -->
+  <section class="container mb-5 d-sm-none d-md-none d-lg-block">
+    <div class="text-center">
+      <h2 class="fw-bold">Trusted by over 800+ companies</h2>
+    </div>
+    <div class="d-flex justify-content-around mt-5 gx-5">
+      <div>
+        <img src="images/company/company-1.png" alt="">
+      </div>
+      <div>
+        <img src="images/company/company-2.png" alt="">
+      </div>
+      <div>
+        <img src="images/company/company-3.png" alt="">
+      </div>
+      <div>
+        <img src="images/company/company-4.png" alt="">
+      </div>
+      <div>
+        <img src="images/company/company-5.png" alt="">
+      </div>
+      <div>
+        <img src="images/company/company-6.png" alt="">
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer Part and last part website -->
+  <footer class=" bg-dark p-5  text-light">
+    <div class="text-center">
+      <h3>STUDY<span class="text-danger">PRESS</span></h3>
+    <p>Office 41, Zawaya Buildin, Ghala Muscat,</p> 
+    <p>Sultanate of Oman <br>
+      Privacy Ploicy | Terms of USE</p>
+      <div class=" d-flex justify-content-center">
+      <p class="mx-3"><i class="fa-brands fa-facebook"></i></p>
+      <p class="mx-3"><i class="fa-brands fa-twitter"></i></p>
+      <p class="mx-3"><i class="fa-brands fa-linkedin"></i></p>
+      <p class="mx-3"><i class="fa-solid fa-envelope"></i></p>
+      </div>
+    </div>
+    <div class="container mt-3 text-end fst-italic">
+      <h6>Creat By Soriful Islam Fahim</h6>
+      <small>Programing Hero Larner || Batch-6</small>
+    </div>
+  </footer>
+
 
 
     
