all problem resolve

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       </li>
                     </ul>
                     <span class="navbar-text">
-                     <button class="border border-primary bg-white text-primary fw-semibold rounded-1 p-2">Register</button>
+                     <button class="border border-primary bg-white  rounded-1 p-2"><a target="_blank" class="text-decoration-none text-primary fw-semibold" href="from.html">Register</a></button>
                     </span>
                   </div>
                 </div>
@@ -452,9 +452,6 @@
     </div>
   </footer>
 
-
-
-    
 
     <!-- ---------Bootstrap JS Link --------- -->
     <script src="bootstrap/bootstrap.min.js"></script>
