responsive provlem solved

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="container overflow-hidden ">
               <div class="row gy-3 row-cols-lg-2  row-cols-md-1  row-cols-sm-1 row-cols-xs-1">
                   <!-- ........Course 1........ -->
-                <div class="col-6">
+                <div class="col-12">
                   <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
                           <img class="img-fluid image-blog" src="images/course/course-1.png" alt="">
@@ -129,7 +129,7 @@
                   </div>
                 </div>
                 <!-- ----------Course 2--------- -->
-                <div class="col-6">
+                <div class="col-12">
                   <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
                           <img class="img-fluid image-blog" src="images/course/course-2.png" alt="">
@@ -142,7 +142,7 @@
                   </div>
                 </div>
                 <!-- --------Course 3------- -->
-                <div class="col-6">
+                <div class="col-12">
                   <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
                           <img class="img-fluid image-blog" src="images/course/course-3.png" alt="">
@@ -155,7 +155,7 @@
                   </div>
                 </div>
                 <!-- -------Course 4 ----------->
-                <div class="col-6">
+                <div class="col-12">
                   <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
                           <img class="img-fluid image-blog" src="images/course/course-4.png" alt="">
@@ -168,7 +168,7 @@
                   </div>
               </div>
               <!-- --------Course 5 --------->
-                <div class="col-6">
+                <div class="col-12">
                   <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
                           <img class="img-fluid image-blog" src="images/course/course-5.png" alt="">
@@ -181,7 +181,7 @@
                   </div>
               </div>
               <!-- ---------Course 6 ------->
-                <div class="col-6">
+                <div class="col-12">
                   <div class="border rounded-1 bg-light d-sm-block d-md-flex d-lg-flex">
                       <div>
                           <img class="img-fluid image-blog" src="images/course/course-6.png" alt="">
@@ -252,24 +252,24 @@
         <div>
           <div class="container text-center">
             <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4 g-2 g-lg-3">
-              <div class="col">
+              <div class="col-12">
                 <div class="p-0 border bg-light">
                   <img class="img-fluid student-image" src="images/student/student-1.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Awlad Hossain</h5>
                   <p>UIUX Designer</p>
                 </div>
               </div>
-              <div class="col">
+              <div class="col-12">
                 <div class="p-0 border bg-light"><img class="img-fluid student-image" src="images/student/student-2.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Jannatul Islam</h5>
                   <p>Motion Design</p></div>
               </div>
-              <div class="col">
+              <div class="col-12">
                 <div class="p-0 border bg-light"><img class="img-fluid student-image" src="images/student/student-3.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Imran Hossain</h5>
                   <p>Graphic Designer</p></div>
               </div>
-              <div class="col">
+              <div class="col-12">
                 <div class="p-0 border bg-light"><img class="img-fluid student-image" src="images/student/student-4.png" alt="">
                   <h5 class="pt-3 fw-semibold font-monospace">Nishi Akter</h5>
                   <p>Beuty Designer</p></div>
@@ -295,7 +295,7 @@
         <div>
           <div class="container overflow-hidden">
             <div class="row row-cols-sm-1 row-cols-md-1 row-cols-lg-2 gx-5 gy-5">
-              <div class="col">
+              <div class="col-12">
                <div class="p-3 border bg-light">
                 <div class="d-flex justify-content-between">
                   <img src="images/comma.png" alt="">
@@ -320,7 +320,7 @@
                   </div>
                </div>
               </div>
-              <div class="col">
+              <div class="col-12">
                 <div class="p-3 border bg-light">
                  <div class="d-flex justify-content-between">
                    <img src="images/comma.png" alt="">
@@ -406,7 +406,7 @@
   </Main>
 
   <!-- -------Extra Trusted Comphany Part-------  -->
-  <section class="container mb-5 d-sm-none d-md-none d-lg-block">
+  <section class="container mb-5 d-none d-lg-block">
     <div class="text-center">
       <h2 class="fw-bold">Trusted by over 800+ companies</h2>
     </div>
