--- a/index.html
+++ b/index.html
@@ -199,40 +199,8 @@
               <button class="btn btn-primary">See More Courses</button>
           </div>
       </section>
-
-
-      <!-- ------------Exploring Part Start-------  -->
-      <section class="mb-5">
-          <div class="row d-md-flex d-lg-flex bg-light explore-part">
-            <div class="col-6">
-              <img class="img-fluid explore-image" src="images/working.png" alt="">
-            </div>
-            <div class="col-6 py-5 px-4 d-sm-p-5">
-              <h2>Explore The E-learning 
-                Institute</h2>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form. </p>
-                    <div class="d-flex justify-content-between">
-                      <div class="p-2">
-                        <h3>3.2K+</h3>
-                        <p>Online Course</p>
-                      </div>
-                      <div class="p-2">
-                        <h3>600+</h3>
-                        <p>Expert member</p>
-                      </div>
-                      <div class="p-2">
-                        <h3>1k+</h3>
-                        <p>Rating & Review</p>
-                      </div>
-                    </div>
-                    <button class="btn btn-primary">Read More</button>
-            </div>
-          </div>
-      </section>
-
-
       <!---------------- Redy And Register Part----------  -->
-      <section class="d-sm-block d-md-block d-lg-flex d-sm-text-center d-md-text-center justify-content-between align-items-center bg-primary rounded-3 p-5 mb-5">
+      <section class="d-sm-block d-md-block text-center d-lg-flex  justify-content-between align-items-center bg-primary rounded-3 p-5 mb-5">
         <div class="text-white ">
           <h1 class="fw-bold">Ready to join?</h1>
           <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
@@ -446,7 +414,7 @@
       <p class="mx-3"><i class="fa-solid fa-envelope"></i></p>
       </div>
     </div>
-    <div class="container mt-3 text-end fst-italic">
+    <div class=" mt-3 text-end fst-italic">
       <h6>Creat By Soriful Islam Fahim</h6>
       <small>Programing Hero Larner || Batch-6</small>
     </div>
